framework/scss/_config/_contextual-variables-parents.scss
/*
* CD44 Design System - contextual variables for Questions de Parents
*/

// ----------------
// ---- COLORS ----
// ----------------

$ds44-contextual-color : #fed037 !default;
$ds44-contextual-hover : darken($ds44-contextual-color, 10%) !default;
$ds44-font-family-base      : "Plus Jakarta Sans", sans-serif;  
$ds44-font-family-headings  : "Dela Gothic One", sans-serif;

/* On redéfini toute la map définie dans _variables.scss
   Juste pour modifier les tailles de h1-->h4
   Cela évite de faire une surcharge avec des !important.
*/
$ds44-font-sizes: (
  base: (
    mobile  : $ds44-font-size-base,  // 16px
    tablet  : $ds44-font-size-base,  // 16px
    desktop : $ds44-font-size-base   // 16px
    ),
  h1: (
    mobile  : 2.125em,  // 34px
    tablet  : 3em,      // 48px
    desktop : 3.125em    // 50px
  ),
  h2: (
    mobile  : 1.75em,   // 28px
    tablet  : 1.875,      // 30px
    desktop : 1.875em   // 30px
  ),
  h3: (
    mobile  : 1.125em, // 18px
    tablet  : 1.25em,    // 20px
    desktop : 1.25em    // 20px
  ),
  h4: (
    mobile  : 1.125em, // 16px
    tablet  : 1.125em,  // 16px
    desktop : 1.125em     // 16px
  ),
  h5: (
    mobile  : 1.125em,  // 18px
    desktop : 1.25em    // 20px
  ),
  h6: (
    mobile  : 1.0625em, // 17px
    desktop : 1.0625em  // 17px
  ),
  smallText: (
    mobile  : .875em,   // 14px
    desktop : .875em    // 14px
  ),
  tinyText: (
    mobile  : .5625em,  // 9px
    desktop : .5625em   // 9px
  ),
  bodySize: (
    mobile  : 1em,      // 16px
    desktop : 1em       // 16px
  ),
  bigText: (
    mobile  : 1.5em,    // 24px
    desktop : 1.5em     // 24px
  ),
  xxlText: (
    mobile  : 2.6875em, // 43px
    desktop : 3.5em     // 56px
  ),
  chapoStyle: (
    mobile  : 1.0625em, // 17px
    desktop : 1.1875em  // 19px
  ),
  menuHeaders: (
    mobile  : 1.625em,  // 26px
    desktop : 2.375em   // 38px
  ),
  menuLinks: (
    mobile  : 1.125em,  // 18px
    desktop : 1.3125em  // 21px
  ),
  menuBackLinks: (
    mobile  : 1.3125em, // 21px
    desktop : 1.75em    // 28px
  ),
  collapserLinks: (
    mobile  : 1.125em,  // 18px
    desktop : 1.125em   // 18px
  ),
  button: (
    mobile  : 1em,   // 16px
    desktop : 1em    // 16px
  ),
  largeButton: (
    mobile  : 1em,      // 16px
    desktop : 1em       // 16px
  ),
  pushTitle : (
    mobile  : 1.75em,   // 28px
    desktop : 1.75em    // 28px
  ),
  quotes: (
    mobile  : 2.375em,  // 38px
    desktop : 2.375em   // 38px
  ),
  errMsg: (
    mobile  : .875em,   // 14px
    desktop : .875em    // 14px
  ),
  formListElem: (
    mobile  : 1.125em,  // 18px
    desktop : 1.125em   // 18px
  ),
  input: (
    mobile  : 1.6rem,   // 16px
    desktop : 1.6rem    // 16px
  ),
  smallTitle: (
    mobile  : 1.6rem,   // 16px
    desktop : 1.6rem    // 16px
  )
);

.ds44-btnIcoText--maxi {
    font-size: 1em!important;
}

.ds44-ssTitreH1_home {
  font-size: 3rem!important;
}
.ds44-cardDateNumber {
  font-size: 1.875em!important;
}
.ds44-card .ds44-cardTitle{
  font-family: "Plus Jakarta Sans", sans-serif;
  font-weight: 700;
}
.ds44-collapser_button{
  font-size: 1.5625em;
}

@media (min-width: 64em) {
    
    .ds44-menuBtn {
        font-size: 1.875em!important;
    }
  }

